2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* vec.h: explicity typename

2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* Makefile.MorphOS, README.AmigaOS, README.MorphOS, 
	  audio/midi_drivers/amiga_midi.*, cheat_screen.cc,
	  files/listfiles.cc, files/utils.cc, version.cc, fnames.h, 
	  audio/Midi.cc: changes by Ruediger Hanke for MorphOS/AmigaOS support
	* data/credits.txt: credit where credit is due
	* configure.in: search for ext/hash_set and ext/hash_map
	* hash_utils.h: changes for cvs GCC
	* pathfinder.cc, shapes/shapeinf.cc: include hash_utils.h instead
	of doing the same tests over and over

2002-01-13  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Show tiles where dragged object's footprint will lie.

	* xdrag.cc (Xdnd): Redesigning so it can provide more visual
	feedback during the drag.

2002-01-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conf/XMLEntity.*: fixed uninitialized no_close
	
2002-01-11  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,shapes/shapeinf.h: quality_flags, okay_to_take.

2002-01-11  Patrick Burke  <takhisisii@yahoo.com.au>
	* conf/*: Added basic comment support to the configuration files using
	<!-- stuff --> style comments. Currently it's only possible to add them
	between the <config> ... </config> tags, due to the way it defines the
	root node.

2002-01-10  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapeedit.cc: Starting to show shape info.
	* shapes/shapeinf.{cc,h} (public): 'Editing' flag added.

2002-01-11  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ,ReadMe updated
	* docs/FAQ.html and ReadMe.html updated
	* docs/xml: faq.xml, docs.xml updated
	* docs/xml: html.xsl, php.xsl changed to do proper referencing

2002-01-09  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Pass bg flag as a parameter so the shapes
	lib is independent of code higher up.
	* objs/egg.cc:  Fixed remove_this() for the 'caltrops' bug.
